--- a/cs261_assignment3/cs261_assignment3/cs261_assignment3.vcxproj.filters
+++ b/cs261_assignment3/cs261_assignment3/cs261_assignment3.vcxproj.filters
@@ -21,9 +21,18 @@
     <ClCompile Include="..\..\LLDeque\linkedListMain.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\CLDeque\circularList.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\CLDeque\circularListMain.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\LLDeque\linkedList.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\CLDeque\circularList.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
