--- a/Stack_from_Queues/makefile
+++ b/Stack_from_Queues/makefile
@@ -1,13 +1,13 @@
 CC=gcc
-CFLAGS=-Wall -std=c99
+CFLAGS=-g -Wall -std=c99
 
-all: stack_from_queue
+all: prog
 
-stack_from_queue:
-gcc -g -Wall -std=c99 -o stack_from_queue stack_from_queue.c
+prog: stack_from_queue.c
+	$(CC) $^ -o $@
 
 clean:
 	-rm *.o
 
 cleanall: clean
-	-rm stack_from_queue
+	-rm prog
