--- a/cs261_assignment3/cs261_assignment3/cs261_assignment3.vcxproj.filters
+++ b/cs261_assignment3/cs261_assignment3/cs261_assignment3.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="..\..\CLDeque\circularListMain.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Stack_from_Queues\stack_from_queue.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\LLDeque\linkedList.h">
@@ -38,6 +41,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\CLDeque\makefilecirListDeque">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="..\..\Stack_from_Queues\makefile">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="..\..\LLDeque\makefileLLDequeBag">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
